[package]
edition = "2021"
name = "nrf-dfu-target"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "Implementation of the Nordic nRF DFU protocol for devices"
repository = "https://github.com/lulf/nrf-dfu"
readme = "README.md"
categories = [
  "embedded",
  "no-std"
]

[dependencies]
embedded-storage = "0.3.0"
defmt = { version = "0.3", optional = true }

[features]
defmt = [
      "dep:defmt",
]
