[package]
edition = "2021"
name = "nrf-dfu-target"
version = "0.3.2"
license = "MIT OR Apache-2.0"
description = "Implementation of the Nordic nRF DFU protocol for devices"
repository = "https://github.com/lulf/nrf-dfu"
readme = "README.md"
categories = [
  "embedded",
  "no-std"
]

[dependencies]
embedded-storage-async = "0.4.1"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
futures-test = { version = "0.3" }

[features]
defmt = [
      "dep:defmt",
]
